tests/should_fail/bug/specialize.coma
module M_specialize__f [#"specialize.rs" 22 0 22 17]
  let%span sspecialize = "specialize.rs" 25 20 25 25
  let%span sspecialize'0 = "specialize.rs" 18 14 18 18
  
  use creusot.prelude.Opaque
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  type t_NonNull  =
    { t_NonNull__pointer: Opaque.ptr }
  
  type t_Unique  =
    { t_Unique__pointer: t_NonNull; t_Unique__qy95zmarker: () }
  
  type t_UsizeNoHighBit  =
    { t_UsizeNoHighBit__0: UInt64.t }
  
  type t_RawVecInner  =
    { t_RawVecInner__ptr: t_Unique; t_RawVecInner__cap: t_UsizeNoHighBit; t_RawVecInner__alloc: () }
  
  type t_RawVec  =
    { t_RawVec__inner: t_RawVecInner; t_RawVec__qy95zmarker: () }
  
  type t_Vec  =
    { t_Vec__buf: t_RawVec; t_Vec__len: UInt64.t }
  
  let rec x (self:t_Vec) (return'  (x'0:()))= any
    [ return''0 (result:())-> {[%#sspecialize'0] true} (! return' {result}) ]
  
  
  meta "compute_max_steps" 1000000
  
  let rec f[#"specialize.rs" 22 0 22 17] (v:t_Vec) (return'  (x'0:()))= (! bb0
    [ bb0 = s0 [ s0 = x {v'0} (fun (_ret:()) ->  [ &_2 <- _ret ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize] false} s1 | s1 = bb2 ] 
    | bb2 = return''0 {_0} ]
    ) [ & _0 : () = Any.any_l () | & v'0 : t_Vec = v | & _2 : () = Any.any_l () ] 
    [ return''0 (result:())-> (! return' {result}) ]

end
module M_specialize__g [#"specialize.rs" 28 0 28 18]
  let%span sspecialize = "specialize.rs" 32 20 32 25
  let%span sspecialize'0 = "specialize.rs" 28 8 28 9
  let%span sspecialize'1 = "specialize.rs" 7 9 7 13
  let%span svec = "../../../creusot-contracts/src/std/vec.rs" 71 20 71 41
  let%span svec'0 = "../../../creusot-contracts/src/std/vec.rs" 21 14 21 41
  let%span sseq = "../../../creusot-contracts/src/logic/seq.rs" 652 20 652 95
  let%span sboxed = "../../../creusot-contracts/src/std/boxed.rs" 33 8 33 18
  
  use creusot.prelude.Opaque
  use creusot.int.UInt64
  use seq.Seq
  use mach.int.Int
  use creusot.prelude.Any
  
  type t_NonNull  =
    { t_NonNull__pointer: Opaque.ptr }
  
  type t_Unique  =
    { t_Unique__pointer: t_NonNull; t_Unique__qy95zmarker: () }
  
  type t_UsizeNoHighBit  =
    { t_UsizeNoHighBit__0: UInt64.t }
  
  type t_RawVecInner  =
    { t_RawVecInner__ptr: t_Unique; t_RawVecInner__cap: t_UsizeNoHighBit; t_RawVecInner__alloc: () }
  
  type t_RawVec  =
    { t_RawVec__inner: t_RawVecInner; t_RawVec__qy95zmarker: () }
  
  type t_Vec  =
    { t_Vec__buf: t_RawVec; t_Vec__len: UInt64.t }
  
  type t_T
  
  predicate inv (_0 : t_T)
  
  predicate invariant' (self : t_T) =
    [%#sboxed] inv self
  
  predicate inv'0 (_0 : t_T)
  
  axiom inv_axiom [@rewrite] : forall x : t_T [inv'0 x] . inv'0 x = invariant' x
  
  predicate invariant''0 (self : Seq.seq t_T) =
    [%#sseq] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'0 (Seq.get self i)
  
  predicate inv'1 (_0 : Seq.seq t_T)
  
  axiom inv_axiom'0 [@rewrite] : forall x : Seq.seq t_T [inv'1 x] . inv'1 x = invariant''0 x
  
  constant v_MAX : UInt64.t = (18446744073709551615 : UInt64.t)
  
  function view (self : t_Vec) : Seq.seq t_T
  
  axiom view_spec : forall self : t_Vec . [%#svec'0] Seq.length (view self) <= UInt64.t'int (v_MAX : UInt64.t)
  
  predicate invariant''1 (self : t_Vec) =
    [%#svec] inv'1 (view self)
  
  predicate inv'2 (_0 : t_Vec)
  
  axiom inv_axiom'1 [@rewrite] : forall x : t_Vec [inv'2 x] . inv'2 x = invariant''1 x
  
  let rec x (self:t_Vec) (return'  (x'0:()))= {[@expl:x 'self' type invariant] [%#sspecialize'1] inv'2 self}
    any [ return''0 (result:())-> (! return' {result}) ] 
  
  meta "compute_max_steps" 1000000
  
  let rec g[#"specialize.rs" 28 0 28 18] (v:t_Vec) (return'  (x'0:()))= {[@expl:g 'v' type invariant] [%#sspecialize'0] inv'2 v}
    (! bb0
    [ bb0 = s0 [ s0 = x {v'0} (fun (_ret:()) ->  [ &_2 <- _ret ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize] false} s1 | s1 = bb2 ] 
    | bb2 = return''0 {_0} ]
    ) [ & _0 : () = Any.any_l () | & v'0 : t_Vec = v | & _2 : () = Any.any_l () ] 
    [ return''0 (result:())-> (! return' {result}) ]

end
module M_specialize__h [#"specialize.rs" 35 0 35 17]
  let%span sspecialize = "specialize.rs" 38 20 38 25
  let%span sspecialize'0 = "specialize.rs" 12 14 12 19
  
  use creusot.prelude.Opaque
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  type t_NonNull  =
    { t_NonNull__pointer: Opaque.ptr }
  
  type t_Unique  =
    { t_Unique__pointer: t_NonNull; t_Unique__qy95zmarker: () }
  
  type t_UsizeNoHighBit  =
    { t_UsizeNoHighBit__0: UInt64.t }
  
  type t_RawVecInner  =
    { t_RawVecInner__ptr: t_Unique; t_RawVecInner__cap: t_UsizeNoHighBit; t_RawVecInner__alloc: () }
  
  type t_RawVec  =
    { t_RawVec__inner: t_RawVecInner; t_RawVec__qy95zmarker: () }
  
  type t_Vec  =
    { t_Vec__buf: t_RawVec; t_Vec__len: UInt64.t }
  
  let rec x (self:t_Vec) (return'  (x'0:()))= any
    [ return''0 (result:())-> {[%#sspecialize'0] false} (! return' {result}) ]
  
  
  meta "compute_max_steps" 1000000
  
  let rec h[#"specialize.rs" 35 0 35 17] (v:t_Vec) (return'  (x'0:()))= (! bb0
    [ bb0 = s0 [ s0 = x {v'0} (fun (_ret:()) ->  [ &_2 <- _ret ] s1) | s1 = bb1 ] 
    | bb1 = s0 [ s0 = {[@expl:assertion] [%#sspecialize] false} s1 | s1 = bb2 ] 
    | bb2 = return''0 {_0} ]
    ) [ & _0 : () = Any.any_l () | & v'0 : t_Vec = v | & _2 : () = Any.any_l () ] 
    [ return''0 (result:())-> (! return' {result}) ]

end
module M_specialize__qyi7590077194068412461__x__refines [#"specialize.rs" 13 4 13 22] (* <std::vec::Vec<U> as T> *)
  let%span sspecialize = "specialize.rs" 13 4 13 22
  let%span svec = "../../../creusot-contracts/src/std/vec.rs" 71 20 71 41
  let%span svec'0 = "../../../creusot-contracts/src/std/vec.rs" 21 14 21 41
  let%span sseq = "../../../creusot-contracts/src/logic/seq.rs" 652 20 652 95
  let%span sboxed = "../../../creusot-contracts/src/std/boxed.rs" 33 8 33 18
  
  use creusot.prelude.Opaque
  use creusot.int.UInt64
  use seq.Seq
  use mach.int.Int
  
  type t_NonNull  =
    { t_NonNull__pointer: Opaque.ptr }
  
  type t_Unique  =
    { t_Unique__pointer: t_NonNull; t_Unique__qy95zmarker: () }
  
  type t_UsizeNoHighBit  =
    { t_UsizeNoHighBit__0: UInt64.t }
  
  type t_RawVecInner  =
    { t_RawVecInner__ptr: t_Unique; t_RawVecInner__cap: t_UsizeNoHighBit; t_RawVecInner__alloc: () }
  
  type t_RawVec  =
    { t_RawVec__inner: t_RawVecInner; t_RawVec__qy95zmarker: () }
  
  type t_Vec  =
    { t_Vec__buf: t_RawVec; t_Vec__len: UInt64.t }
  
  type t_U
  
  predicate inv (_0 : t_U)
  
  predicate invariant' (self : t_U) =
    [%#sboxed] inv self
  
  predicate inv'0 (_0 : t_U)
  
  axiom inv_axiom [@rewrite] : forall x : t_U [inv'0 x] . inv'0 x = invariant' x
  
  predicate invariant''0 (self : Seq.seq t_U) =
    [%#sseq] forall i : int . 0 <= i /\ i < Seq.length self  -> inv'0 (Seq.get self i)
  
  predicate inv'1 (_0 : Seq.seq t_U)
  
  axiom inv_axiom'0 [@rewrite] : forall x : Seq.seq t_U [inv'1 x] . inv'1 x = invariant''0 x
  
  constant v_MAX : UInt64.t = (18446744073709551615 : UInt64.t)
  
  function view (self : t_Vec) : Seq.seq t_U
  
  axiom view_spec : forall self : t_Vec . [%#svec'0] Seq.length (view self) <= UInt64.t'int (v_MAX : UInt64.t)
  
  predicate invariant''1 (self : t_Vec) =
    [%#svec] inv'1 (view self)
  
  predicate inv'2 (_0 : t_Vec)
  
  axiom inv_axiom'1 [@rewrite] : forall x : t_Vec [inv'2 x] . inv'2 x = invariant''1 x
  
  goal refines : [%#sspecialize] forall self : t_Vec . inv'2 self  -> inv'2 self
end
